# ADAPTEGO

./: .gitignore  Dockerfile  USAGE_MANUAL.md  adaptive_training_standalone.py  config.ini  docker-compose.yml  docker.sh  readme.md  rename_project.sh  run_adaptive_demo.sh  run_ros2_simulation.sh  run_sim_adaptive_demo.sh  setup.sh  setup_paper_experiments.sh  setup_ros2_environment.sh  start_paper_experiments.sh  start_simulation.sh  train.py
scripts/: download_third_party.sh
src/adaptive_planning/: CMakeLists.txt  package.xml
src/adaptive_planning/include/adaptive_planning/: adaptive_weights.h
src/adaptive_planning/launch/: adaptive_hybrid_demo.launch  sim_adaptive_planning.launch
src/adaptive_planning/scripts/: adaptive_training.py  data_collection_eval.py  drl_nav_network.py  drooid_swarm.py  paper_evaluation.py  pytorch_stepbystep_trainer.py  rl_controller.py  sim_data_collector.py  sim_weight_adapter.py  sim_weight_bridge.py  train_with_pybullet.py
src/adaptive_planning/src/: adaptive_weights.cpp  weight_adapter_node.cpp
src/planner/plan_manage/launch/: advanced_param_exp.xml  default.rviz  single_run_in_exp.launch
src/realflight_modules/VINS-Fusion/config/: fast_drone_250.yaml  left.yaml  right.yaml
src/realflight_modules/px4ctrl/: CMakeLists.txt  package.xml
src/realflight_modules/px4ctrl/config/: ctrl_param_fpv.yaml
src/realflight_modules/px4ctrl/launch/: keyboard_control.launch  run_ctrl.launch
src/realflight_modules/px4ctrl/src/: PX4CtrlFSM.cpp  PX4CtrlFSM.h  keyboard_control.cpp  px4ctrl_node.cpp
src/realflight_modules/px4ctrl/thrust_calibrate_scrips/: thrust_calibrate.py
src/uav_simulator/so3_quadrotor_simulator/include/ode/libs/numeric/odeint/performance/: performance.py
